Mostly documentation updates, recovering where I was on this eight weeks ago...

--- a/senro-core/src/main/java/org/senro/metadata/graph/package.html
+++ b/senro-core/src/main/java/org/senro/metadata/graph/package.html
@@ -5,7 +5,7 @@
 
   @(#)package.html	1.60 98/01/27
 
-   Copyright [yyyy] [name of copyright owner]
+   Copyright 2006, Senro Project Developers
 
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
@@ -22,26 +22,17 @@
 </head>
 <body bgcolor="white">
 
-##### THIS IS THE TEMPLATE FOR THE PACKAGE DOC COMMENTS. #####
-##### TYPE YOUR PACKAGE COMMENTS HERE.  BEGIN WITH A     #####
-##### ONE-SENTENCE SUMMARY STARTING WITH A VERB LIKE:    #####
-Provides for.... 
-
-
-<h2>Package Specification</h2>
-
-##### FILL IN ANY SPECS NEEDED BY JAVA COMPATIBILITY KIT #####
-<ul>
-  <li><a href="">##### REFER TO ANY FRAMEMAKER SPECIFICATION HERE #####</a>
-</ul>
-
+<p>Provides implementation for metadata graph traversal functionality.  This is useful for determining connectivity between
+    elements in a client model to determine permissions modeling in a database, for instance.</p>
+<!--
 <h2>Related Documentation</h2>
 
 For overviews, tutorials, examples, guides, and tool documentation, please see:
 <ul>
   <li><a href="">##### REFER TO NON-SPEC DOCUMENTATION HERE #####</a>
 </ul>
-
+-->
+    
 <!-- Put @see and @since tags down here. -->
 
 </body>
