--- a/trunk/senro-core/src/main/java/org/senro/metadata/impl/package.html
+++ b/trunk/senro-core/src/main/java/org/senro/metadata/impl/package.html
@@ -5,7 +5,7 @@
 
   @(#)package.html	1.60 98/01/27
 
-   Copyright [yyyy] [name of copyright owner]
+   Copyright 2006, Senro Project Developers
 
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
@@ -22,12 +22,8 @@
 </head>
 <body bgcolor="white">
 
-##### THIS IS THE TEMPLATE FOR THE PACKAGE DOC COMMENTS. #####
-##### TYPE YOUR PACKAGE COMMENTS HERE.  BEGIN WITH A     #####
-##### ONE-SENTENCE SUMMARY STARTING WITH A VERB LIKE:    #####
-Provides for.... 
-
-
+<p>Provides default implementations of MetadataFactory and MetadataManager</p>
+<!--
 <h2>Package Specification</h2>
 
 ##### FILL IN ANY SPECS NEEDED BY JAVA COMPATIBILITY KIT #####
@@ -41,7 +37,7 @@ For overviews, tutorials, examples, guides, and tool documentation, please see:
 <ul>
   <li><a href="">##### REFER TO NON-SPEC DOCUMENTATION HERE #####</a>
 </ul>
-
+-->
 <!-- Put @see and @since tags down here. -->
 
 </body>
