--- a/branches/senro-gxt/senro-client/src/org/senro/gwt/public/GwtMain.html
+++ b/branches/senro-gxt/senro-client/src/org/senro/gwt/public/GwtMain.html
@@ -9,5 +9,6 @@
   
   <body>
     <script type="text/javascript" language="javascript" src="org.senro.gwt.GwtMain.nocache.js"></script>
+   	<iframe src="javascript:''" id='__gwt_historyFrame' style='position:absolute;width:0;height:0;border:0'></iframe>
   </body>
 </html>
